Refatorar para utilizar OpenApi